infrastructure-cfg/devops-blue-deployment.yml
# See https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/deployment-v1/

apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-blue-deployment
  labels:
    app.kubernetes.io/name: devops-blue
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: devops-blue
  template:
    metadata:
      labels:
        app.kubernetes.io/name: devops-blue
        app.kubernetes.io/version: 1.0.1
    spec:
      containers:
      - name: nginx-svc
        image: ymatev/micro-svc-nginx:33-1.1-551cfc
        resources:
          limits:
            cpu: "0.5"
            memory: 500M
        ports:
        - name:  http
          containerPort: 80
          protocol: TCP
      - name: php-svc
        image: ymatev/micro-svc-php:33-1.1-551cfc
        resources:
          limits:
            cpu: "0.5"
            memory: 500M
  replicas: 1
