infrastructure-cfg/devops-blue-service.yml
# See https://kubernetes.io/docs/reference/kubernetes-api/service-resources/service-v1/

apiVersion: v1
kind: Service
metadata:
  name: devops-blue-service
  labels:
    app.kubernetes.io/name: devops-blue
spec:
  selector:
    app.kubernetes.io/name: devops-blue
  type:  LoadBalancer
  ports:
  - name: devops-blue-port
    port: 8808         # port number to be available at host
    targetPort: 80     # port on pod
