infrastructure-cfg/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: test-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*.devoops.com"
    - devoops.com
    port:
      name: http
      number: 80
      protocol: HTTP
